fix line spacing
not present locally…. only online version.

--- a/app/assets/styles/_type.scss
+++ b/app/assets/styles/_type.scss
@@ -34,7 +34,6 @@ hr{
 h2 {
   font-weight: 200;
   font-style: italic;
-  line-height: 1rem;
   color: $dark-blue;
   font-size:1.8rem;
   margin-top:1rem;
